<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donationInfoMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.donation_info.DonationInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/donationInfoScrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/donationInfoContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/donationMapView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/donationMapGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/donationInfoAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/donation_info_address_label"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donationMapView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/donationInfoAddressValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/donationInfoAddressLabel"
                app:layout_constraintTop_toBottomOf="@id/donationInfoAddressLabel" />

            <View
                android:id="@+id/donationInfoDayHourTopDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donationInfoAddressValue" />

            <LinearLayout
                android:id="@+id/donationInfoDayHourLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donationInfoDayHourTopDivider">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/donationInfoDayLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/donationInfoDayLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/donation_info_day_label"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/donationInfoDayValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/donationInfoDayLabel"
                        app:layout_constraintTop_toBottomOf="@id/donationInfoDayLabel" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/donationInfoDayHourDivider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorDivider" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/donationInfoHourLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/donationInfoHourLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/donation_info_hour_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/donationInfoHourValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/donationInfoHourLabel"
                        app:layout_constraintTop_toBottomOf="@id/donationInfoHourLabel" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <View
                android:id="@+id/donationInfoDayHourBottomDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donationInfoDayHourLayout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/donationInfoSelectedInterval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:text="@string/donation_info_selected_interval_label"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donationInfoDayHourBottomDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/donationInfoButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_64"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/donationInfoDayHourBottomDivider"
                app:layout_constraintVertical_bias="0">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/donationInfoBookButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_stroke_white_content_background"
                    android:text="@string/donation_info_book_donation_text"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/donationInfoConfirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/red_background"
                    android:text="@string/donation_info_confirm_book_text"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@id/donationInfoBookButton"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/donationMapGuideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>